log
Thu 24 Aug 2023 01:41:30 AM UTC: 
 tests:  0|6
total_score: 0/70
d452867
Thu 24 Aug 2023 02:04:32 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
654c814
Thu 24 Aug 2023 02:05:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b31daaa
Thu 24 Aug 2023 02:17:07 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:10: error: unused variable ‘current’ [-Werror=unused-variable]
   39 |   Node * current = list->head;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79093d2
Thu 24 Aug 2023 02:20:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9c4b59
Thu 24 Aug 2023 02:25:13 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
59fc6d4
Thu 24 Aug 2023 02:29:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90111db
Thu 24 Aug 2023 02:30:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3b3f9a1
Thu 24 Aug 2023 02:31:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bdf670e
Thu 24 Aug 2023 02:31:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
18122ed
Thu 24 Aug 2023 02:33:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0240b4b
Thu 24 Aug 2023 02:33:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
181eb6d
Thu 24 Aug 2023 02:40:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97ce852
Thu 24 Aug 2023 02:45:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
474e47e
Thu 24 Aug 2023 02:59:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
58e71c6
Thu 24 Aug 2023 03:02:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
736d066
Thu 24 Aug 2023 03:03:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
316abb5
Thu 24 Aug 2023 03:08:54 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
86b5da0
Thu 24 Aug 2023 03:14:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e1d15bb
Thu 24 Aug 2023 03:19:01 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cae6311
Thu 24 Aug 2023 03:22:01 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e8f9d06
Thu 24 Aug 2023 03:26:03 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e938927
Thu 24 Aug 2023 03:26:52 AM UTC: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
7cc9c66
Thu 24 Aug 2023 03:28:33 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
48ea4f5
Thu 24 Aug 2023 03:30:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9803bae
Thu 24 Aug 2023 03:31:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
341308b
Thu 24 Aug 2023 03:44:08 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
e137443
Thu 24 Aug 2023 04:23:09 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
3c073ed
Thu 24 Aug 2023 04:28:29 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
b911e8f
Thu 24 Aug 2023 04:34:30 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
12ac187
Thu 24 Aug 2023 04:44:08 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9a667f2
Thu 24 Aug 2023 04:46:34 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
43cebb9
Thu 24 Aug 2023 04:47:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0e3212d
Thu 24 Aug 2023 04:48:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
135ca60
Thu 24 Aug 2023 05:07:11 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
8b60ef8
Thu 24 Aug 2023 05:11:47 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
3812068
Thu 24 Aug 2023 05:13:42 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
1a0bcf2
